@@ -20,6 +20,7 @@ Bugs fixed:
 - 1638073 Fixed missing unescape code in XML parser
 - 1644223 Fixed internalProdiver segfaults with a propertyFilter
 - 1650708 Fixed embeddedObject qualifier in wrong place
+- 1656317 Fixed segfault with non-existing providerRegister
 
 Changes in 1.2.0
 ================
