@@ -1,3 +1,8 @@
+2007-02-09  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>
+
+	* providerRegister.c: 
+	Fixed 1656317: check file pointer before closing.
+
 2007-02-07  Chris Buccella
 
 	* httpAdapter.c
